<?xml version="1.0"?>
<package format="3">
    <name>ndt_localizer</name>
    <version>1.7.0</version>
    <description>The ndt_localizer package</description>
    <maintainer email="shenzb12@lzu.edu.cn">adam shan</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>builtin_interfaces</depend>
    <depend>diagnostic_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>message_generation</depend>
    <depend>nav_msgs</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_ros</depend>
    <depend>rclcpp</depend>
    <depend>rosidl_default_generators</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_eigen</depend>
    <depend>tf2</depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
